--- a/css/yuexinc.css
+++ b/css/yuexinc.css
@@ -1,13 +1,15 @@
 element.style {
 }
-div#columns {
-    margin-top: 15px;
-}
-div {
+h2 {
+    font-size: 24px;
+    line-height: 24px;
+    text-align: left;
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-family: 'Courier New', Courier, monospace;
     display: block;
-}
-footer.page-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
